--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ justify-between
     </div>
     <section id="produtos-carrinho" class="h-3/5 overflow-y-auto flex flex-col gap-2">
     </section>
-    <p id="preco-total"></p>
+    <p id="preco-total" class="bg-slate-200 text-green-900 pl-5 rounded-sm"></p>
     <button class="bg-slate-200 text-slate-900 p-1">Finalizar Compra</button>
   </section>
   <header class="flex bg-gray-700 p-2 justify-between z-10">
