--- a/checkout.html
+++ b/checkout.html
@@ -142,10 +142,20 @@
     <section id="produtos-checkout" class="w-1/3 bg-gray-200 rounded-lg py-5">
 
       <section id="container-produto-comprado" class="h-4/5 overflow-y-auto px-6 "></section>
-      <section id="celula-finalizacao" class="flex flex-col px-2 h-1/5">
+      <section id="celula-finalizacao" class="flex flex-col px-2 h-1/5 justify-around">
 
-        <p id="preco-total" class="bg-slate-200 text-green-900 pl-5 rounded-sm">111</p>
-        <button class="bg-slate-200 text-slate-900 p-1  hover:bg-slate-700 hover:text-slate-200">Finalizar Compra</button>
+        <p id="preco-total" class="bg-slate-300 text-green-900 pl-5 rounded-lg  m-8 text-center">111</p>
+        <button  class=
+         "bg-slate-300
+          text-slate-900
+          p-2 
+          m-8 
+          hover:bg-slate-700
+          hover:text-slate-200
+          rounded-lg"
+          type="submit" 
+          >Finalizar Compra
+          </button>
       </section>
     </section>
 
