--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ justify-between
     <section id="produtos-carrinho" class="h-3/5 overflow-y-auto flex flex-col gap-2">
     </section>
     <p id="preco-total" class="bg-slate-200 text-green-900 pl-5 rounded-sm"></p>
-    <button class="bg-slate-200 text-slate-900 p-1  hover:bg-slate-700 hover:text-slate-200">Finalizar Compra</button>
+    <button  id="finalizar-compra" class="bg-slate-200 text-slate-900 p-1  hover:bg-slate-700 hover:text-slate-200">Finalizar Compra</button>
   </section>
   <header class="flex bg-gray-700 p-2 justify-between z-10">
     <img class="h-10" src="Assets/images/Logo Ross.jpg
