--- a/pedidos.html
+++ b/pedidos.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-  
+
   <header class="flex bg-gray-700 p-2 justify-between z-10">
     <img class="h-8" src="Assets/images/Logo Ross.jpg
     " alt="Logo Ross">
-    
+
   </header>
 
-  <main class="flex flex-col items-center">    </main>
+  <main class="flex flex-col items-center"> </main>
+  <script type="module" src="./pedidos.js"></script>
 
-  
 </body>
 
 </html>
