Finalização do projeto

--- a/checkout.html
+++ b/checkout.html
@@ -14,9 +14,10 @@
 <body class="bg-amber-100 flex flex-col h-screen">
 
   <header class="flex bg-gray-700 p-2 justify-between z-10">
-    <img class="h-8" src="Assets/images/Logo Ross.jpg
-    " alt="Logo Ross">
-
+    <a href="/">
+      <img class="h-8" src="Assets/images/Logo Ross.jpg
+      " alt="Logo Ross">      
+    </a>
   </header>
 
   <form class="flex w-100 px-5 py-10 gap-4 grow" >
@@ -144,7 +145,7 @@
       <section id="container-produto-comprado" class="h-4/5 overflow-y-auto px-6 "></section>
       <section id="celula-finalizacao" class="flex flex-col px-2 h-1/5 justify-around">
 
-        <p id="preco-total" class="bg-slate-300 text-green-900 pl-5 rounded-lg  m-8 text-center">111</p>
+        <p id="preco-total" class="bg-slate-300 text-green-900 pl-5 rounded-lg  m-8 text-center"></p>
         <button  class=
          "bg-slate-300
           text-slate-900
