introdução instruçoes código

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+ <!-- readMe01 -->
+
+<!DOCTYPE html> <!--readMe02 -->
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
