--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
- <!-- readMe01 -->
+<!-- readMe01 -->
 
-<!DOCTYPE html> <!--readMe02 -->
+<!DOCTYPE html>
+<!--readMe02 -->
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!--readMe04, readMe05 L-94 -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -17,6 +20,7 @@
   </head>
 
   <body>
+    <!--readMe06-->
     <section
       id="carrinho"
       class="fixed top-0 right-[-375px] bg-gray-900 h-screen w-[375px] text-slate-300 duration-200 border-l flex flex-col justify-between"
@@ -27,14 +31,19 @@
           <i class="fa-solid fa-circle-xmark"></i>
         </button>
       </div>
+
       <section
         id="produtos-carrinho"
         class="h-3/5 overflow-y-auto flex flex-col gap-2"
-      ></section>
+      >
+        x
+      </section>
+
       <p
         id="preco-total"
         class="bg-slate-200 text-green-900 pl-5 rounded-sm"
       ></p>
+
       <button
         id="finalizar-compra"
         class="bg-slate-200 text-slate-900 p-1 hover:bg-slate-700 hover:text-slate-200"
@@ -42,14 +51,13 @@
         Finalizar Compra
       </button>
     </section>
+
+    <!--readMe05-->,
     <header class="flex bg-gray-700 p-2 justify-between z-10">
       <a href="/">
-        <img
-        class="h-10"
-        src="Assets/images/Logo Ross.jpg"
-        alt="Logo Ross"
-        />
+        <img class="h-10" src="Assets/images/Logo Ross.jpg" alt="Logo Ross" />
       </a>
+      
       <div class="text-slate-300 flex gap-2 items-end mx-2">
         <button id="abrir-carrinho">
           <i class="fa-solid fa-cart-shopping"></i>
@@ -57,7 +65,8 @@
         <a href="/pedidos.html">
           <button><i class="fa-solid fa-user"></i></button>
         </a>
-      </div>
+        </div>
+    
     </header>
 
     <main class="flex flex-col items-center">
@@ -101,20 +110,15 @@
           />
           <label
             for="Exibir-feminino"
-            class="peer-checked:bg-slate-900
-             peer-checked:text-slate-300 
-             peer-checked:font-bold 
-             p-2
-             rounded-xl 
-             select-none 
-             cursor-pointer"
+            class="peer-checked:bg-slate-900 peer-checked:text-slate-300 peer-checked:font-bold p-2 rounded-xl select-none cursor-pointer"
             >Feminino</label
           >
         </div>
       </section>
-
+      <!-- readm07-->
       <section id="container-produto" class="flex flex-wrap"></section>
     </main>
+    <!-- readm07-->
     <script type="module" src="./script.js"></script>
   </body>
 </html>
